// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-artiste-auteur > bnc 1`] = `
"artiste-auteur . cotisations: 1230
artiste-auteur . cotisations . IRCEC: 0"
`;

exports[`calculate simulations-artiste-auteur > bnc 2`] = `
"artiste-auteur . cotisations: 1863
artiste-auteur . cotisations . IRCEC: 920"
`;

exports[`calculate simulations-artiste-auteur > bnc 3`] = `
"artiste-auteur . cotisations: 931
artiste-auteur . cotisations . IRCEC: 0

Notifications affichées : artiste-auteur . cotisations . avertissement trimestres retraite"
`;

exports[`calculate simulations-artiste-auteur > option surcotisation 1`] = `
"artiste-auteur . cotisations: 501
artiste-auteur . cotisations . IRCEC: 0"
`;

exports[`calculate simulations-artiste-auteur > option surcotisation 2`] = `
"artiste-auteur . cotisations: 493
artiste-auteur . cotisations . IRCEC: 0"
`;

exports[`calculate simulations-artiste-auteur > option surcotisation 3`] = `
"artiste-auteur . cotisations: 451
artiste-auteur . cotisations . IRCEC: 0"
`;

exports[`calculate simulations-artiste-auteur > option surcotisation 4`] = `
"artiste-auteur . cotisations: 444
artiste-auteur . cotisations . IRCEC: 0"
`;

exports[`calculate simulations-artiste-auteur > salarié 1`] = `
"artiste-auteur . cotisations: 160
artiste-auteur . cotisations . IRCEC: 0

Notifications affichées : artiste-auteur . cotisations . avertissement trimestres retraite"
`;

exports[`calculate simulations-artiste-auteur > salarié 2`] = `
"artiste-auteur . cotisations: 1523
artiste-auteur . cotisations . IRCEC: 0"
`;

exports[`calculate simulations-artiste-auteur > salarié 3`] = `
"artiste-auteur . cotisations: 1683
artiste-auteur . cotisations . IRCEC: 0"
`;

exports[`calculate simulations-artiste-auteur > salarié 4`] = `
"artiste-auteur . cotisations: 1070
artiste-auteur . cotisations . IRCEC: 8000"
`;

exports[`calculate simulations-artiste-auteur > salarié 5`] = `
"artiste-auteur . cotisations: 1399
artiste-auteur . cotisations . IRCEC: 11200"
`;
